# nano-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
core/: Cargo.toml
core/src/: arena.rs  error.rs  lib.rs  math.rs  model.rs  tensor.rs
core/src/layers/: activations.rs  conv.rs  dense.rs  flatten.rs  mod.rs  pooling.rs
core/tests/: general_purpose_test.rs
examples/: esp32_deploy.rs  export_for_esp32.py
notebook-realworld-examples/: 06_mnist.ipynb  07_fashion_mnist.ipynb  08_sensor_anomaly.ipynb  09_keyword_spotting.ipynb  10_text_classifier.ipynb
notebooks/: 01_pipeline_validation.ipynb  02_mlp_classification.ipynb  03_deep_cnn.ipynb  04_activation_functions.ipynb  05_transfer_learning.ipynb  _setup.py
notebooks-for-test/: 06_mnist_digits.ipynb  07_fashion_mnist.ipynb  08_sensor_fusion_mlp.ipynb  _setup.py  run_06_mnist.py  run_07_fashion.py  run_08_sensor.py  run_09_keyword_spotting.py  run_10_text_classifier.py
py_binding/: Cargo.toml
py_binding/src/: lib.rs
python/nano_rust_py/: __init__.py  utils.py
scripts/: export.py  nano_rust_utils.py
